--- a/index.html
+++ b/index.html
@@ -1,48 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
     <meta charset="UTF-8">
     <title>Vue3 Beyond</title>
     <script src="https://unpkg.com/vue@3"></script>
-    <style>
-        html, body {
-            height: 100%;
-        }
-
-        body {
-            display: grid;
-            place-items: center;
-        }
-
-        .text-red {
-            color: red;
-        }
-
-        .text-green {
-            color: green;
-        }
-    </style>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-
+<body class="h-full grid place-items-center">
 <div id="app">
-    <button :class="active ? 'text-red' : 'text-green'" @click="toggle">Click Me</button>
+
+    <section v-show="inProgress.length">
+        <h2 class="font-bold mb-2">In Progress</h2>
+        <ul>
+            <li v-for="assignment in inProgress"
+                :key="assignment.id">
+                <label>{{assignment.name}}
+                    <input v-model="assignment.complete" type="checkbox">
+                </label>
+            </li>
+        </ul>
+    </section>
+
+    <section v-show="completed.length" class="mt-8">
+        <h2 class="font-bold mb-2">Completed</h2>
+        <ul>
+            <li v-for="assignment in completed"
+                :key="assignment.id">
+                <label>{{assignment.name}}
+                    <input v-model="assignment.complete" type="checkbox">
+                </label>
+            </li>
+        </ul>
+    </section>
+
 </div>
 
 <script>
-    Vue.createApp({
+    let app = {
         data() {
             return {
-                active: false
-            };
-        },
-
-        methods: {
-            toggle() {
-                this.active = !this.active
+                assignments: [
+                    {id: 1, name: 'Finish project', complete: false},
+                    {id: 2, name: 'Read chapter 4', complete: false},
+                    {id: 3, name: 'Turn in homework', complete: false},
+                ]
             }
-        }
-    }).mount('#app');
+        },
+        computed: {
+            completed() {
+                return this.assignments.filter(assignment => assignment.complete);
+            },
+            inProgress() {
+                return this.assignments.filter(assignment => !assignment.complete);
+            }
+        },
+    };
+
+    Vue.createApp(app).mount('#app');
 </script>
 </body>
 </html>
