Add test component

--- a/index.html
+++ b/index.html
@@ -8,52 +8,33 @@
 </head>
 <body class="h-full grid place-items-center">
 <div id="app">
-
-    <section v-show="inProgress.length">
-        <h2 class="font-bold mb-2">In Progress</h2>
-        <ul>
-            <li v-for="assignment in inProgress"
-                :key="assignment.id">
-                <label>{{assignment.name}}
-                    <input v-model="assignment.complete" type="checkbox">
-                </label>
-            </li>
-        </ul>
-    </section>
-
-    <section v-show="completed.length" class="mt-8">
-        <h2 class="font-bold mb-2">Completed</h2>
-        <ul>
-            <li v-for="assignment in completed"
-                :key="assignment.id">
-                <label>{{assignment.name}}
-                    <input v-model="assignment.complete" type="checkbox">
-                </label>
-            </li>
-        </ul>
-    </section>
-
+    <app-button>Submit</app-button>
+    <app-button>Click</app-button>
 </div>
 
 <script>
     let app = {
-        data() {
-            return {
-                assignments: [
-                    {id: 1, name: 'Finish project', complete: false},
-                    {id: 2, name: 'Read chapter 4', complete: false},
-                    {id: 3, name: 'Turn in homework', complete: false},
-                ]
-            }
-        },
-        computed: {
-            completed() {
-                return this.assignments.filter(assignment => assignment.complete);
+        components: {
+            'app-button': {
+
+                template: `
+                  <div :disabled="processing"
+                       class="bg-gray-300 hover:bg-gray-200 border rounded px-2 py-1 shadow text-center">
+                  <slot/>
+                  </div>
+                `,
+
+                mounted() {
+                    // alert('hello');
+                },
+
+                data() {
+                    return {
+                        processing: true,
+                    }
+                }
             },
-            inProgress() {
-                return this.assignments.filter(assignment => !assignment.complete);
-            }
-        },
+        }
     };
 
     Vue.createApp(app).mount('#app');
