--- a/index.html
+++ b/index.html
@@ -1,43 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full">
-<head>
-    <meta charset="UTF-8">
-    <title>Vue3 Beyond</title>
-    <script src="https://unpkg.com/vue@3"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="h-full grid place-items-center">
-<div id="app">
-    <app-button>Submit</app-button>
-    <app-button>Click</app-button>
-</div>
-
-<script>
-    let app = {
-        components: {
-            'app-button': {
-
-                template: `
-                  <div :disabled="processing"
-                       class="bg-gray-300 hover:bg-gray-200 border rounded px-2 py-1 shadow text-center">
-                  <slot/>
-                  </div>
-                `,
-
-                mounted() {
-                    // alert('hello');
-                },
-
-                data() {
-                    return {
-                        processing: true,
-                    }
-                }
-            },
-        }
-    };
-
-    Vue.createApp(app).mount('#app');
-</script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
